--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".Zigzag" />
         <activity android:name=".Sdes"></activity>
+        <activity android:name=".Rsa"></activity>
     </application>
 
 </manifest>
